[package]
name = "live-reload"
version = "0.2.0"
authors = ["Caleb Jones <code@calebjones.net>"]
description = "A library to help with live-reloading game development"
license = "Zlib"
documentation = "https://docs.rs/live-reloading"
repository = "https://github.com/porglezomp-misc/live-reloading-rs"
edition = "2018"

[dependencies]
libloading = "0.4"
notify = "4.0"

[workspace]
members = ["demo"]